# b2b-leadflow-agent-2026

./: .env.example  .env.production.example  .env.production.smoke  .gitattributes  .gitignore  DEPLOYMENT.md  HOMEWORK_FINAL_REPORT.md  HOMEWORK_REPORT.md  HOMEWORK_REPORT_STAGE2.md  HOMEWORK_REPORT_STAGE3.md  HOMEWORK_REPORT_STAGE4.md  HOMEWORK_REPORT_STAGE5.md  HOMEWORK_REPORT_STAGE6.md  HOMEWORK_REPORT_STAGE7A.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_stage0_baseline.py  0002_campaigns_companies.py  0003_research_runs.py  0004_qualification.py  0005_safe_outreach.py  0006_test_campaign_execution.py  0007_compliance_ready.py  0008_controlled_live_pilot.py
backend/app/: __init__.py  main.py
backend/app/api/: campaigns.py  (+10 more)
backend/scripts/: smoke_stage1.py  smoke_stage2.py  smoke_stage2_testdb.py  smoke_stage3.py  smoke_stage3_testdb.py  smoke_stage4_testdb.py  smoke_stage5_testdb.py  smoke_stage6_testdb.py  smoke_stage7_testdb.py  smoke_stage8.py
backend/tests/: conftest.py  test_campaign_leads.py  test_campaigns.py  test_companies.py  test_compliance.py  test_execution.py  test_health.py  test_live_pilot.py  test_migrations.py  test_outreach.py  test_production_config.py  test_providers.py  test_qualification.py  test_qualification_review.py  test_readiness.py  test_research.py  test_research_review.py  test_secret_filter.py  test_seed.py  test_stage8_operations.py  test_stop_all.py
(+115 files in other folders)
